调试完成的扫描代码